# py-blackslope

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  manage.py  populate_db.py  pyproject.toml  pytest.ini  run-docker.sh
.github/workflows/: ci.yaml
apiapp/: apps.py  urls.py
apiapp/common/decorators/: strong_type.py
apiapp/common/extensions/: django_py_automapper_extension.py
apiapp/migrations/: 0001_initial.py
apiapp/operations/movies/: __init__.py  viewmodels.py  views.py
apiapp/repositories/movies/: __init__.py  dtomodels.py  movie_repository.py
apiapp/services/movies/: __init__.py  domainmodels.py  movie_svc.py
blackslope/: asgi.py  settings.py  urls.py  wsgi.py
docs/archs/: arch.drawio
ioc/: bootstrapper.py
middleware/: api_error.py  api_exception.py  api_http_status_code.py  api_response.py  description_enum_meta.py  exception_middleware.py
scripts/: dev.py  server.py
tests/: test_blackslope.py
tests/common/decorators/: test_strong_type.py
tests/oprateion_tests/movies_tests/: test_views.py  test_views_movie_controller.py  test_views_movies_controller.py
tests/services_tests/movies_tests/: test_movie_svc_movie_service.py
