[tool.poetry]
name = "py-blackslope"
version = "0.1.0"
description = ""
authors = ["pmotameni <47757728+pmotameni@users.noreply.github.com>"]
packages = [
    { include="scripts", from="." },
    { include ="apiapp", from = "." },
    { include ="blackslope", from = "." },
]

[tool.poetry.scripts]
start = "scripts.server:main"
install = "scripts.dev:install"
pre-commit = "scripts.dev:pre_commit"
lint = "scripts.dev:lint"
test = "scripts.dev:test"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"
pydantic = "^1.9.0"
drf-yasg = "^1.20.0"
py-automapper = "^1.0.1"
django-health-check = "^3.16.5"
requests = "^2.27.1"
django-environ = "^0.8.1"
jsonpickle = "^2.1.0"
pylint-django = "^2.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pre-commit = "^2.17.0"
isort = "^5.10.1"
black = "^22.1.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ['apiapp','blackslope']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
